IPP/projects/IPP-test.php-master/parse-only/vyzi_tests/should-fail/wrong_arg_type4.src
.IPPcode19
PUSHS labelhahah
